# hacksgiving-2024

./: .env.local  LICENSE  README.md  docker-compose.yml  hello.py
backend/: .gitignore  Dockerfile  alembic.ini  crud.py  database.py  dependencies.py  exhibit.py  exhibit_info.json  init_data.py  main.py  museum.db  pyproject.toml  recommender.py  requirements.txt  schemas.py  user.py
backend/alembic/: env.py
backend/alembic/versions/: initial_migration.py
backend/notebooks/: test_llm_feedback_loop.ipynb  test_translate.ipynb
backend/src/: chat.py  database.py  dependencies.py  exhibit.py  init_data.py  livekit_serve.py  main.py  museum.db  recommender.py  translater.py  user.py
backend/src/ai/: agents.py  chat.py  knowledge_base.py  recommedation.py
backend/src/alembic/: env.py
backend/src/database/: crud.py  database.py  models.py  schemas.py
backend/src/routers/: __init__.py  chat.py  exhibits.py  recommendations.py  topics.py  user.py  visits.py
discovery-world/: .env.example  agent.py  pyproject.toml
frontend/: .env  Dockerfile  bun.lockb  index.html  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/api/: config.ts  queries.ts  translator.ts
frontend/src/components/: ChatMessage.tsx  ChatWindow.tsx  CogSpinner.tsx  ComplexityControl.tsx  ComplexitySlider.tsx  ErrorMessage.tsx  ExhibitCard.tsx  Navbar.tsx  (+17 more)
local-scripts/data_gen/: Exhibit_Master_List(Data).csv  database_data.ipynb  exhibit_topics.gexf  exhibit_topics.json  exhibits.json  topics.json
local-scripts/exhibit_recommendation_engine/: xre.ipynb
(+18 files in other folders)
