[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.5",
    "google-generativeai>=0.8.3",
    "google>=3.0.0",
    "langchain-ollama>=0.2.0",
    "openai>=1.55.0",
    "uvicorn>=0.32.1",
]
