[project]
name = "livekit-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "livekit>=0.18.1",
    "livekit-agents>=0.11.3",
    "livekit-plugins-openai>=0.10.7",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "fastapi>=0.115.5",
    "faiss-cpu>=1.9.0.post1",
    "alembic>=1.14.0",
    "llama-index>=0.12.1",
    "uvicorn>=0.32.1",
    "llama-index-vector-stores-faiss>=0.3.0",
    "llama-index-llms-openai>=0.3.1",
    "llama-index-llms-gemini>=0.4.0",
]
